--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,6 +2,7 @@ variables:
     GIT_STRATEGY: clone
     CUDA_PATH: -DCUDA_TOOLKIT_ROOT_DIR=/usr/local/cuda-11.6/
 stages:
+  - set-up
   - build
   - lint
   - test
@@ -25,7 +26,29 @@ stages:
       # Execute pipeline automatically if triggered by a MR
     - if: $CI_PIPELINE_SOURCE == "merge_request_event"
 
+# This job sets up a symbolic link to from the root repository to build/ska-pss-astrotypes/source.
+# astrotypes/build
+# astrotypes/install
+# astrotypes/source
+# We put the above structure inside an additional 'build' directory to comply with SKAO CICD Pipeline conventions.
+set-up:
+  stage: set-up
+  extends: .common
+  script:
+    - mkdir build && cd build
+    - mkdir astrotypes && cd astrotypes
+    - cd ../../
+    - ln -s $CI_PROJECT_DIR/ build/astrotypes/source
+  tags:
+    - ubuntu-18.04
+  artifacts:
+    name: "$CI_COMMIT_REF_NAME-cheetah"
+    paths:
+      - build/astrotypes/source/*
+    expire_in: 1 d
+
 .builds:
+  needs: set-up
   stage: build
   extends: .common
   tags:
@@ -44,6 +67,7 @@ stages:
 lint:
   stage: lint
   needs:
+    - set-up
     - build-release
   image: ubuntu:20.04
   rules:
@@ -84,6 +108,8 @@ lint:
     expire_in: 1 d
   
 .tests:
+  needs:
+    - set-up
   stage: test
   extends: .common
   tags:
