Revert "AT4 1274 add c++17 as the standard for linting."
This reverts commit 0044e5b16a292bfe47a19aa4781a02bd00c71852.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -68,7 +68,7 @@ lint:
     - clang-tidy --version
     - 'cmake -DCMAKE_EXPORT_COMPILE_COMMANDS=ON
       -DCMAKE_BUILD_TYPE=release -DENABLE_CUDA=false'
-    - 'run-clang-tidy -std=c++17 -checks=''cppcoreguidelines-*,performance-*,readibility-*,modernize-*,misc-*,clang-analyzer-*,google-*,
+    - 'run-clang-tidy -checks=''cppcoreguidelines-*,performance-*,readibility-*,modernize-*,misc-*,clang-analyzer-*,google-*,
       -cppcoreguidelines-pro-type-reinterpret-cast,-cppcoreguidelines-pro-bounds-array-to-pointer-decay,-modernize-use-nodiscard''
       -quiet 2>&1 | tee clang-tidy.log'
   artifacts:
