AT4-1340 add Ben, and I to code owners file

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,1 +1,1 @@
-* @mmickaliger @arunnaidu123 @DevLumbaa @ariskarastergiou
+* @mmickaliger @arunnaidu123 @ariskarastergiou @DevLumbaa @grace.berriman @benjaminshaw
