AT4-1395 switched to using ctest

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -85,7 +85,7 @@ lint:
     - ubuntu-22.04
   script:
     - cd build
-    - make test
+    - ctest --output-on-failure --force-new-ctest-process
 
 build-release:
   extends: .builds
