--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -124,11 +124,11 @@ doc-build:
   stage: build
   image: alpine
   script:
-    - apk update && apk add git build-base cmake3 doxygen graphviz ttf-freefont
+    - apk update && apk add git build-base cmake doxygen graphviz ttf-freefont
     - git clone https://gitlab.com/ska-telescope/pss/ska-pss-astrotypes.git
     - mkdir build-docs
     - cd build-docs
-    - cmake3 -DCMAKE_BUILD_TYPE=documentation -DPANDA_SOURCE_DIR=../panda/ -DASTROTYPES_SOURCE_DIR=../astrotypes ../
+    - cmake -DCMAKE_BUILD_TYPE=documentation -DPANDA_SOURCE_DIR=../panda/ -DASTROTYPES_SOURCE_DIR=../astrotypes ../
     - make doc
   artifacts:
     paths:
