--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -66,7 +66,7 @@ lint:
   stage: build
   extends: .common
   tags:
-    - ubuntu-22.04
+    - ds-psi-pss-worker-1b
   script:
     - mkdir build && cd build
     - cmake -DCMAKE_INSTALL_PREFIX=../install $CMAKE_FLAGS ..
@@ -82,7 +82,7 @@ lint:
   stage: test
   extends: .common
   tags:
-    - ubuntu-22.04
+    - ds-psi-pss-worker-1b
   script:
     - cd build && mkdir reports
     - ctest --output-on-failure --force-new-ctest-process --output-junit reports/test-results-$SPIN.xml
