AT4-1920 revert linting job to STFC runners
This reverts commit 3ef1759aecc1db38eb3c1c1235514382135de5a6, reversing
changes made to d1f62b3e0b21bda7d6329209c78cd9146af4f360.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -42,7 +42,7 @@ lint:
     - if: $CI_PIPELINE_SOURCE == "merge_request_event"
       allow_failure: true
   tags:
-    - aws-ska-default-xlarge
+    - ska-default-xlarge
   script:
     - apt-get -y update
     - apt install -y cmake
